update timmer and animate feature-2

--- a/src/style.css
+++ b/src/style.css
@@ -126,6 +126,10 @@ header div {
 
 }
 
+.winner-message {
+    color: white;
+}
+
 .invisible {
     visibility: hidden;
 }
@@ -319,5 +323,5 @@ footer {
 footer span {
     /* padding-top: 6px; */
     font-style: italic;
-    font-size: smaller;
+    font-size: x-small;
 }
